--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-тестовая страница
+<!DOCTYPE html>
+<html lamg="ru">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Семестровая работа</title>
+</head>
+
+<body>
+    <div id="header">Хэдер</div>
+    <div id="menu">
+        <ul>
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="pages/news.html">Новости</a></li>
+            <li><a href="pages/practices.html">Практики</a></li>
+            <li><a href="pages/goods.html">Товары</a></li>
+            <li><a href="pages/contacts.html">Контакты</a></li>
+        </ul>
+    </div>
+    <div id="content">
+        <p>Информация об авторе</p>
+        <img src="images/mrrobot.webp" alt="Фото автора" width="400" height="250">
+        <p>Hello friend</p>
+        <p>Карцев Всеволод Дмитриевич</p>
+        <p>ЭФБО-02-24</p>
+        <p>Обо мне: родился 25 января 2006 года. С 2023 года выступаю за команду Team Spirit. Чемпион мира по Counter-Strike 2, лучший игрок 2024 года. В 2024 году вошёл в число победителей ежегодного рейтинга российского Forbes «З0 до 30» в категории «Спорт и киберспорт».</p>
+        <div>Навык 1</div>
+        <div>Навык 2</div>
+        <div>Навык 3</div>
+        <div>Навык 4</div>
+        <div>
+            Мой опыт работы:
+            <div>
+                Опыт 1<br>
+                Работал фантазёром. Сочинял и праздновал.
+            </div>
+            <div>
+                Опыт 2<br>
+                Работал воровством. Воровал и продавал.
+            </div>
+            <div>
+                Опыт 3<br>
+                Работал рэпером. Читал и пел.
+            </div>
+        </div>
+    </div>
+    <div id="footer">Футер</div>
+</body>
+
+</html>
