--- a/index.html
+++ b/index.html
@@ -1,51 +1,71 @@
 <!DOCTYPE html>
-<html lamg="ru">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Семестровая работа</title>
+    <link rel="stylesheet" href="style/styles.css">
 </head>
 
 <body>
-    <div id="header">Хэдер</div>
-    <div id="menu">
-        <ul>
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="pages/news.html">Новости</a></li>
-            <li><a href="pages/practices.html">Практики</a></li>
-            <li><a href="pages/goods.html">Товары</a></li>
-            <li><a href="pages/contacts.html">Контакты</a></li>
-        </ul>
-    </div>
-    <div id="content">
-        <p>Информация об авторе</p>
-        <img src="images/mrrobot.webp" alt="Фото автора" width="400" height="250">
-        <p>Hello friend</p>
-        <p>Карцев Всеволод Дмитриевич</p>
-        <p>ЭФБО-02-24</p>
-        <p>Обо мне: родился 25 января 2006 года. С 2023 года выступаю за команду Team Spirit. Чемпион мира по Counter-Strike 2, лучший игрок 2024 года. В 2024 году вошёл в число победителей ежегодного рейтинга российского Forbes «З0 до 30» в категории «Спорт и киберспорт».</p>
-        <div>Навык 1</div>
-        <div>Навык 2</div>
-        <div>Навык 3</div>
-        <div>Навык 4</div>
-        <div>
-            Мой опыт работы:
-            <div>
-                Опыт 1<br>
-                Работал фантазёром. Сочинял и праздновал.
+        <div class="page-container">
+            <div class="header">Хэдер</div>
+            <div class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/news.html">Новости</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/practices.html">Практики</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/goods.html">Товары</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/contacts.html">Контакты</a></li>
+                </ul>
             </div>
-            <div>
-                Опыт 2<br>
-                Работал воровством. Воровал и продавал.
+            <div class="content">
+                <div class="profile-header">
+                    <h1 class="profile-title">Информация об авторе</h1>
+                    <img class="profile-photo" src="images/mrrobot.webp" alt="Фото
+автора">
+                    <h2 class="profile-name">Карцев Всеволод Дмитриевич</h2>
+                    <p class="profile-group">ЭФБО-02-24</p>
+                </div>
+
+                <div class="about-me">
+                    <p>Обо мне: родился 25 января 2006 года. С 2023 года выступаю за команду Team Spirit. Чемпион мира
+                        по Counter-Strike 2,
+                        лучший игрок 2024 года. В 2024 году вошёл в число победителей ежегодного рейтинга российского
+                        Forbes «З0 до 30» в
+                        категории «Спорт и киберспорт».</p>
+                </div>
+
+                <div class="skills-container">
+                    <div class="skill-tag">MongoDB</div>
+                    <div class="skill-tag">Express</div>
+                    <div class="skill-tag">Vue</div>
+                    <div class="skill-tag">NodeJS</div>
+                </div>
+
+                <div class="experience-section">
+                    <h2 class="section-title">Мой опыт работы</h2>
+                    <div class="experience-card">
+                        <h3 class="experience-title">Опыт 1</h3>
+                        <p class="experience-desc">Работал фантазёром. Сочинял и
+                            праздновал.</p>
+                    </div>
+                    <div class="experience-card">
+                        <h3 class="experience-title">Опыт 2</h3>
+                        <p class="experience-desc">Работал воровством. Воровал и
+                            продавал.</p>
+                    </div>
+                    <div class="experience-card">
+                        <h3 class="experience-title">Опыт 3</h3>
+                        <p class="experience-desc">Работал рэпером. Читал и пел.
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div>
-                Опыт 3<br>
-                Работал рэпером. Читал и пел.
-            </div>
+            <div class="footer">Футер</div>
         </div>
-    </div>
-    <div id="footer">Футер</div>
+
 </body>
 
 </html>
