--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Семестровая работа</title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
+
 <body>
-    <div id="header">Хэдер</div>
-    <div id="menu">
-        <ul>
-            <li><a href="../index.html">Главная</a></li>
-            <li><a href="news.html">Новости</a></li>
-            <li><a href="practices.html">Практики</a></li>
-            <li><a href="goods.html">Товары</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-    </div>
-    <div id="content">
-        <div class="email">Почта: realemail@gmail.com</div>
-        <div class="address">Адрес: Ulitsa Pushkina, dom kolotushkina, 9, Moscow</div>
-        <div class="phone">
-            <a href="">позвонить мне</a>
+    <div class="wrapper">
+        <header class="my_header">
+            <div class="header">Хэдер</div>
+            <div class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+                    <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+                    <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+                    <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+                </ul>
+            </div>
+        </header>
+        <div class="content">
+            <h1 class="contacts__title title">Наши контакты</h1>
+            <div class="contacts">
+                <div class="email">Почта: realemail@gmail.com</div>
+                <div class="address">Адрес: Ulitsa Pushkina, dom kolotushkina, 9, Moscow</div>
+                <div class="phone">
+                    <a href="">позвонить мне</a>
+                </div>
+            </div>
+
         </div>
+        <div class="footer my_footer">Футер</div>
     </div>
-    <div id="footer">Футер</div>
+
 </body>
+
 </html>
