--- a/pages/goods.html
+++ b/pages/goods.html
@@ -1,46 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Семестровая работа</title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
+
 <body>
-    <div id="header">Хэдер</div>
-    <div id="menu">
-        <ul>
-            <li><a href="../index.html">Главная</a></li>
-            <li><a href="news.html">Новости</a></li>
-            <li><a href="practices.html">Практики</a></li>
-            <li><a href="goods.html">Товары</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-    </div>
-    <div id="content">
-        <div class="goods">
-            <div class="good">
-                <div class="good__img">
-                    <img src="../images/ducky.webp" alt="">
-                </div>
-                <h2 class="good__title">ruber ducky</h2>
-                <div class="good__price">10$</div>
+    <div class="wrapper">
+        <header class="my_header">
+            <div class="header">Хэдер</div>
+            <div class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+                    <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+                    <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+                    <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+                </ul>
             </div>
-            <div class="good">
-                <div class="good__img">
-                    <img src="../images/rolex.webp" alt="">
+        </header>
+        <div class="content">
+            <h1 class="goods__title title">Наши товары</h1>
+            <div class="goods__row">
+                <div class="good">
+                    <div class="good__content">
+                        <div class="good__img">
+                            <img src="../images/ducky.webp" alt="">
+                        </div>
+                        <h2 class="good__title">ruber ducky</h2>
+                        <div class="good__price">10$</div>
+                    </div>
+
                 </div>
-                <h2 class="good__title">rolex datejust</h2>
-                <div class="good__price">10$</div>
-            </div>
-            <div class="good">
-                <div class="good__img">
-                    <img src="../images/stanok.webp" alt="">
+                <div class="good">
+                    <div class="good__content">
+                        <div class="good__img">
+                            <img src="../images/rolex.webp" alt="">
+                        </div>
+                        <h2 class="good__title">rolex datejust</h2>
+                        <div class="good__price">10$</div>
+                    </div>
+
                 </div>
-                <h2 class="good__title">Вертикально-фрезерный консольный станок с числовым программным управлением и автоматической сменой инструмента.</h2>
-                <div class="good__price">10$</div>
+                <div class="good">
+                    <div class="good__content">
+                        <div class="good__img">
+                            <img src="../images/stanok.webp" alt="">
+                        </div>
+                        <h2 class="good__title">Вертикально-фрезерный консольный станок с числовым программным
+                            управлением и
+                            автоматической сменой инструмента.</h2>
+                        <div class="good__price">10$</div>
+                    </div>
+
+                </div>
             </div>
         </div>
+        <div class="footer">Футер</div>
     </div>
-    <div id="footer">Футер</div>
+
 </body>
+
 </html>
