--- a/index.html
+++ b/index.html
@@ -48,17 +48,15 @@
                     <h2 class="section-title">Мой опыт работы</h2>
                     <div class="experience-card">
                         <h3 class="experience-title">Опыт 1</h3>
-                        <p class="experience-desc">Работал фантазёром. Сочинял и
-                            праздновал.</p>
+                        <p class="experience-desc">сообщество f</p>
                     </div>
                     <div class="experience-card">
                         <h3 class="experience-title">Опыт 2</h3>
-                        <p class="experience-desc">Работал воровством. Воровал и
-                            продавал.</p>
+                        <p class="experience-desc">киберспорт</p>
                     </div>
                     <div class="experience-card">
                         <h3 class="experience-title">Опыт 3</h3>
-                        <p class="experience-desc">Работал рэпером. Читал и пел.
+                        <p class="experience-desc">google
                         </p>
                     </div>
                 </div>
