--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -22,16 +22,19 @@
                 </ul>
             </div>
         </header>
-        <div class="content">
-            <h1 class="contacts__title title">Наши контакты</h1>
-            <div class="contacts">
-                <div class="email">Почта: realemail@gmail.com</div>
-                <div class="address">Адрес: Ulitsa Pushkina, dom kolotushkina, 9, Moscow</div>
-                <div class="phone">
-                    <a href="">позвонить мне</a>
+        <div class="container">
+            <div class="content">
+                <h1 class="contacts__title title">Наши контакты</h1>
+                <div class="contacts">
+                    <div class="email">Почта: realemail@gmail.com</div>
+                    <div class="address">Адрес: Ulitsa Pushkina, dom kolotushkina, 9, Moscow</div>
+                    <div class="phone">
+                        <a href="">позвонить мне</a>
+                    </div>
                 </div>
-            </div>
 
+            </div>
+            
         </div>
         <div class="footer my_footer">Футер</div>
     </div>
