--- a/pages/goods.html
+++ b/pages/goods.html
@@ -22,44 +22,47 @@
                 </ul>
             </div>
         </header>
-        <div class="content">
-            <h1 class="goods__title title">Наши товары</h1>
-            <div class="goods__row">
-                <div class="good">
-                    <div class="good__content">
-                        <div class="good__img">
-                            <img src="../images/ducky.webp" alt="">
+        <div class="container">
+            <div class="content">
+                <h1 class="goods__title title">Наши товары</h1>
+                <div class="goods__row">
+                    <div class="good">
+                        <div class="good__content">
+                            <div class="good__img">
+                                <img src="../images/ducky.webp" alt="">
+                            </div>
+                            <h2 class="good__title">ruber ducky</h2>
+                            <div class="good__price">10$</div>
                         </div>
-                        <h2 class="good__title">ruber ducky</h2>
-                        <div class="good__price">10$</div>
-                    </div>
 
-                </div>
-                <div class="good">
-                    <div class="good__content">
-                        <div class="good__img">
-                            <img src="../images/rolex.webp" alt="">
+                    </div>
+                    <div class="good">
+                        <div class="good__content">
+                            <div class="good__img">
+                                <img src="../images/rolex.webp" alt="">
+                            </div>
+                            <h2 class="good__title">rolex datejust</h2>
+                            <div class="good__price">10$</div>
                         </div>
-                        <h2 class="good__title">rolex datejust</h2>
-                        <div class="good__price">10$</div>
-                    </div>
 
-                </div>
-                <div class="good">
-                    <div class="good__content">
-                        <div class="good__img">
-                            <img src="../images/stanok.webp" alt="">
+                    </div>
+                    <div class="good">
+                        <div class="good__content">
+                            <div class="good__img">
+                                <img src="../images/stanok.webp" alt="">
+                            </div>
+                            <h2 class="good__title">Вертикально-фрезерный консольный станок с числовым программным
+                                управлением и
+                                автоматической сменой инструмента.</h2>
+                            <div class="good__price">10$</div>
                         </div>
-                        <h2 class="good__title">Вертикально-фрезерный консольный станок с числовым программным
-                            управлением и
-                            автоматической сменой инструмента.</h2>
-                        <div class="good__price">10$</div>
-                    </div>
 
+                    </div>
                 </div>
             </div>
+            <div class="footer">Футер</div>
         </div>
-        <div class="footer">Футер</div>
+
     </div>
 
 </body>
