--- a/pages/news.html
+++ b/pages/news.html
@@ -22,28 +22,33 @@
                 </ul>
             </div>
         </header>
-
-        <div class="content">
-            <h1 class="news__title title">Новости</h1>
-            <article class="news">
-                <h2 class="news__title">Новость 1</h2>
-                <h3 class="news__author">Александр Сергеевич Пушкин 20.10.2025</h3>
-                <p class="news__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione similique perspiciatis, obcaecati
-                    sequi facilis reprehenderit.</p>
-            </article>
-            <article class="news">
-                <h2 class="news__title">Новость 2</h2>
-                <h3 clas="news__author">Александр Сергеевич Пушкин 21.10.2025</h3>
-                <p class="news__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, assumenda!</p>
-            </article>
-            <article class="news">
-                <h2 class="news__title">Новость 3</h2>
-                <h3 class="news__author">Александр Сергеевич Пушкин 22.10.2025</h3>
-                <p class="news__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, ipsam voluptatum ipsum totam
-                    veritatis ducimus!</p>
-            </article>
+        <div class="container">
+            <div class="content">
+                <h1 class="news__title title">Новости</h1>
+                <article class="news">
+                    <h2 class="news__title">Мирэа сдо</h2>
+                    <h3 class="news__author">Аноним 20.10.2025 15:23</h3>
+                    <p class="news__text">Сегодня вайбкодеры наконец то обновили сайт мирэа</p>
+                </article>
+                <article class="news">
+                    <h2 class="news__title">Мирэа сдо</h2>
+                    <h3 clas="news__author">Александр Сергеевич Пушкин 20.10.2025 15:24</h3>
+                    <p class="news__text">Сайт мирэа опять упал</p>
+                </article>
+                <article class="news">
+                    <h2 class="news__title">Инцидент в корпусе В</h2>
+                    <h3 clas="news__author">Аноним 22.10.2027 20:31</h3>
+                    <p class="news__text">В мирэа прибыл годжо сатору</p>
+                </article>
+                <article class="news">
+                    <h2 class="news__title">Мирэа сдо</h2>
+                    <h3 class="news__author">Аноним 22.10.2027 20:32</h3>
+                    <p class="news__text">Сайт мирэа починили</p>
+                </article>
+            </div>
+            <div class="footer">Футер</div>
         </div>
-        <div class="footer">Футер</div>
+
     </div>
 
 </body>
