--- a/pages/practices.html
+++ b/pages/practices.html
@@ -22,8 +22,10 @@
                 </ul>
             </div>
         </header>
-        <div class="content">
+        <div class="container">
+            <div class="content">
 
+        </div>
         </div>
         <div class="footer">Футер</div>
     </div>
