--- a/pages/news.html
+++ b/pages/news.html
@@ -32,7 +32,7 @@
                 </article>
                 <article class="news">
                     <h2 class="news__title">Мирэа сдо</h2>
-                    <h3 clas="news__author">Александр Сергеевич Пушкин 20.10.2025 15:24</h3>
+                    <h3 clas="news__author">Аноним 20.10.2025 15:24</h3>
                     <p class="news__text">Сайт мирэа опять упал</p>
                 </article>
                 <article class="news">
