--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
                 <div class="experience-section">
                     <h2 class="section-title">Мой опыт работы</h2>
                     <div class="experience-card">
-                        <h3 class="experience-title">Опыт 1</h3>
-                        <p class="experience-desc">сообщество f</p>
+                        <h3 class="experience-title">Белый хакер</h3>
+                        <p class="experience-desc">Опыт работы в команде "сообщество f"</p>
                     </div>
                     <div class="experience-card">
-                        <h3 class="experience-title">Опыт 2</h3>
-                        <p class="experience-desc">киберспорт</p>
+                        <h3 class="experience-title">киберспорт</h3>
+                        <p class="experience-desc">чемпион мира по контерстрайку</p>
                     </div>
                     <div class="experience-card">
-                        <h3 class="experience-title">Опыт 3</h3>
-                        <p class="experience-desc">google
+                        <h3 class="experience-title">Google</h3>
+                        <p class="experience-desc">в одиночку создал google chrome
                         </p>
                     </div>
                 </div>
